2006-03-11	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_row_deleted): Use next/prev item (if
	  any) as cursor/anchor when a row is deleted from the model. Else if
	  the deleted item was the last item, reset anchor/cursor.

2006-03-08	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_set_model): Always schedule a
	  relayout here.
	* exo/exo-icon-view.c: Apply the scroll_to_path in the expose event
	  handler rather than the size_allocate.

2006-03-06	Benedikt Meurer <benny@xfce.org>

	* autogen.sh, configure.in.in, po/LINGUAS: Read the set of available
	  languages from po/LINGUAS and substitute them when autogen.sh is
	  run. This way we can continue to use glib-gettext.

2006-03-05	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Bump version to 0.3.1.5svn.

2006-03-05	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Bump version to 0.3.1.4alpha2.
	* configure.in.in: Bump soname.
	* NEWS: Add news items.

2006-03-04	Benedikt Meurer <benny@xfce.org>

	* po/de.po: Fix error.

2006-03-02	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, exo/exo-gdk-pixbuf-extensions.{c,h},
	  exo/exo.symbols: Import exo_gdk_pixbuf_colorize, exo_gdk_pixbuf_lucent
	  and exo_gdk_pixbuf_spotlight into libexo, so they can also be used by
	  xfdesktop.
	* docs/reference/: Update the API documentation.

2006-03-01	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_get_selected_items): Return the
	  selected items in the correct order.

2006-02-27	Benedikt Meurer <benny@xfce.org>

	* exo/exo-tree-view.c(exo_tree_view_button_press_event): In single-click
	  mode, do not emit "row-activated" if the button-press event was for
	  one of the associated windows (i.e. the columns header window).

2006-02-27	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c: Handle scrolling to a path before the view
	  is realized/layouted.

2006-02-27	Benedikt Meurer <benny@xfce.org>
