@@ -1,0 +1,11 @@
+[Desktop Entry]
+Encoding=UTF-8
+Version=1.0
+Icon=sylpheed-claws
+Type=X-XFCE-Helper
+_Name=Sylpheed Claws
+StartupNotify=true
+X-XFCE-Binaries=sylpheed-claws;
+X-XFCE-Category=MailReader
+X-XFCE-Commands=%B;
+X-XFCE-CommandsWithParameter=%B --compose "%s";
