@@ -1,5 +1,11 @@
 2006-03-11	Benedikt Meurer <benny@xfce.org>
 
+	* exo-helper/helpers/sylpheed-claws.desktop.in,
+	  exo-helper/helpers/Makefile.am: Add Sylpheed Claws as MailReader to
+	  the helper list. Thanks to Bernhard Walle <bernhard.walle@gmx.de>.
+
+2006-03-11	Benedikt Meurer <benny@xfce.org>
+
 	* exo/exo-icon-view.c(exo_icon_view_row_deleted): Use next/prev item (if
 	  any) as cursor/anchor when a row is deleted from the model. Else if
 	  the deleted item was the last item, reset anchor/cursor.
